Deployment scripts must be inline (no checkout)

--- a/eng/pipelines/templates/stages/archetype-rust-release.yml
+++ b/eng/pipelines/templates/stages/archetype-rust-release.yml
@@ -92,7 +92,7 @@ stages:
                     displayName: Compress Crate for ESRP
                     inputs:
                       targetType: filePath
-                      filePath: $(Build.SourcesDirectory)/eng/scripts/Compress-ReleaseCrate.ps1
+                      filePath: eng/scripts/Compress-ReleaseCrate.ps1
                       arguments: >
                         -ArtifactName '${{artifact.name}}'
                         -ArtifactRootPath '$(Pipeline.Workspace)/drop'
