--- a/eng/pipelines/templates/stages/archetype-rust-release.yml
+++ b/eng/pipelines/templates/stages/archetype-rust-release.yml
@@ -120,12 +120,10 @@ stages:
                     displayName: 'ESRP Release'
                     inputs:
                       connectedservicename: 'Azure SDK PME Managed Identity'
-                      KeyVaultName: $(kv-azuresdk-codesign)
-                      SignCertName: $(azure-sdk-esrp-release-certificate)
-                      # keyvaultname: $(2460c5ef-KeyVaultName)
-                      # authcertname: $(2460c5ef-Cert-Auth)
-                      # signcertname: $(2460c5ef-Cert-Signing)
-                      clientid: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
+                      KeyVaultName: 'kv-azuresdk-codesign'
+                      SignCertName: 'azure-sdk-esrp-release-certificate'
+                      ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
+                      DomainTenantId: '975f013f-7f24-47e8-a7d3-abc4752bf346'
                       Usemanagedidentity: true
                       intent: 'packagedistribution'
                       contenttype: 'Rust'
