Add KV and signing info

--- a/eng/pipelines/templates/stages/archetype-rust-release.yml
+++ b/eng/pipelines/templates/stages/archetype-rust-release.yml
@@ -121,6 +121,8 @@ stages:
                       ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
                       DomainTenantId: '975f013f-7f24-47e8-a7d3-abc4752bf346'
                       Usemanagedidentity: true
+                      KeyVaultName: 'kv-azuresdk-codesign'
+                      SignCertName: 'azure-sdk-esrp-release-certificate'
                       intent: 'packagedistribution'
                       contenttype: 'Rust'
                       contentsource: 'Folder'
