Added sdk/storage/azure_storage_queue (#2732)
Fixes #2708

Added support for the 2018-03-28 Queue API. The following functions have
been created on the new QueueClient, roughly following the pattern in
the .Net SDK:

## QueueServiceClient

The `QueueServiceClient` provides operations to interact with the Azure
Storage Queue service at the account level.

| Method | Parameters | Return Type | Description |
|--------|------------|-------------|-------------|
| `new` | `endpoint: &str`<br>`credential: Arc<dyn
TokenCredential>`<br>`options: Option<QueueServiceClientOptions>` |
`Result<Self>` | Creates a new QueueServiceClient using Entra ID
authentication |
| `endpoint` | `&self` | `&Url` | Returns the endpoint URL of the Azure
storage account |
| `queue_client` | `&self`<br>`queue_name: String` | `QueueClient` |
Returns a new QueueClient instance for a specific queue |
| `create_queue` | `&self`<br>`queue_name: &str`<br>`options:
Option<QueueClientCreateOptions<'_>>` | `Result<Response<(), NoFormat>>`
| Creates a new queue under the account |
| `delete_queue` | `&self`<br>`queue_name: &str`<br>`options:
Option<QueueClientDeleteOptions<'_>>` | `Result<Response<(), NoFormat>>`
| Permanently deletes the specified queue |
| `get_properties` | `&self`<br>`options:
Option<QueueServiceClientGetPropertiesOptions<'_>>` |
`Result<Response<QueueServiceProperties, XmlFormat>>` | Retrieves the
properties of the queue service |
| `set_properties` | `&self`<br>`queue_service_properties:
RequestContent<QueueServiceProperties, XmlFormat>`<br>`options:
Option<QueueServiceClientSetPropertiesOptions<'_>>` |
`Result<Response<(), NoFormat>>` | Sets the properties of the queue
service |
| `list_queues` | `&self`<br>`options:
Option<QueueServiceClientListQueuesOptions<'_>>` |
`Result<PageIterator<Response<ListQueuesResponse, XmlFormat>>>` | Lists
queues in the storage account with pagination |
| `get_statistics` | `&self`<br>`options:
Option<QueueServiceClientGetStatisticsOptions<'_>>` |
`Res

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
   "sdk/canary/azure_canary",
   "sdk/storage/azure_storage_common",
   "sdk/storage/azure_storage_blob",
+  "sdk/storage/azure_storage_queue",
 ]
 exclude = [
   "eng/scripts",
