Disable rustdoc lint on bare URLs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -156,3 +156,6 @@ uninlined_format_args = "allow"
 
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
+
+[workspace.lints.rustdoc]
+bare_urls = "allow"
