--- a/eng/pipelines/templates/stages/archetype-rust-release.yml
+++ b/eng/pipelines/templates/stages/archetype-rust-release.yml
@@ -21,36 +21,36 @@ parameters:
 stages:
 - ${{ if eq(variables['System.TeamProject'], 'internal') }}:
   - ${{ if in(variables['Build.Reason'], 'Manual', '') }}:
-    - ${{ each artifact in parameters.Artifacts }}:
-      - stage: Release_${{artifact.safeName}}
-        displayName: "Release: ${{artifact.name}}"
-        dependsOn: ${{parameters.DependsOn}}
-        condition: and(succeeded(), ne(variables['SetDevVersion'], 'true'), ne(variables['Skip.Release'], 'true'), ne(variables['Build.Repository.Name'], 'Azure/azure-sdk-for-rust-pr'))
-        variables:
-        - template: /eng/pipelines/templates/variables/globals.yml
-        - template: /eng/pipelines/templates/variables/image.yml
-        - template: /eng/pipelines/templates/variables/rust.yml
+    - stage: Release_Batch
+      displayName: "Releasing: ${{length(parameters.Artifacts)}} crates"
+      dependsOn: ${{parameters.DependsOn}}
+      condition: and(succeeded(), ne(variables['SetDevVersion'], 'true'), ne(variables['Skip.Release'], 'true'), ne(variables['Build.Repository.Name'], 'Azure/azure-sdk-for-rust-pr'))
+      variables:
+      - template: /eng/pipelines/templates/variables/globals.yml
+      - template: /eng/pipelines/templates/variables/image.yml
+      - template: /eng/pipelines/templates/variables/rust.yml
 
-        pool:
-          name: $(LINUXPOOL)
-          image: $(LINUXVMIMAGE)
-          os: linux
+      pool:
+        name: $(LINUXPOOL)
+        image: $(LINUXVMIMAGE)
+        os: linux
 
-        jobs:
-        # TODO: Ensure that CHANGELOG is properly processed
-        - job: TagRepository
-          displayName: "Create release tag"
-          condition: and(succeeded(), ne(variables['Skip.TagRepository'], 'true'))
+      jobs:
+      # TODO: Ensure that CHANGELOG is properly processed
+      - job: TagRepository
+        displayName: "Create release tag"
+        condition: and(succeeded(), ne(variables['Skip.TagRepository'], 'true'))
 
-          steps:
-          - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
+        steps:
+        - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
 
-          - download: current
-            displayName: Download ${{parameters.PipelineArtifactName}} artifact
-            artifact: ${{parameters.PipelineArtifactName}}
+        - download: current
+          displayName: Download ${{parameters.PipelineArtifactName}} artifact
+          artifact: ${{parameters.PipelineArtifactName}}
 
-          - template: /eng/common/pipelines/templates/steps/retain-run.yml
+        - template: /eng/common/pipelines/templates/steps/retain-run.yml
 
+        - ${{ each artifact in parameters.Artifacts }}:
           - script: |
               echo "##vso[build.addbuildtag]${{artifact.name}}"
             displayName: Add build tag '${{artifact.name}}'
@@ -62,131 +62,95 @@ stages:
               ReleaseSha: $(Build.SourceVersion)
               WorkingDirectory: $(Pipeline.Workspace)/_work
 
-        - deployment: PublishPackage
-          displayName: "Publish to Crates.io"
-          condition: and(succeeded(), ne(variables['Skip.PublishPackage'], 'true'))
-          templateContext:
-            type: releaseJob  # Required, this indicates this deployment job is a release job
-            isProduction: true  # Required, must be 'true' or 'false'
-            inputs:  # All input build artifacts must be declared here
-            - input: pipelineArtifact  # Required, type of the input artifact
-              artifactName: ${{parameters.PipelineArtifactName}}  # Required, name of the pipeline artifact
-              targetPath: $(Pipeline.Workspace)/drop  # Optional, specifies where the artifact is downloaded to
-          environment: ${{parameters.Environment}}
-          # This timeout shouldn't be necessary once we're able to parallelize better. Right now,
-          # this is here to ensure larger areas (30+) libraries don't time out.
-          timeoutInMinutes: 120
-          dependsOn: TagRepository
-          pool:
-            name: azsdk-pool
-            image: ubuntu-24.04
-            os: linux
-          strategy:
-            runOnce:
-              deploy:
-                steps:
-                  - pwsh: |
-                      $ArtifactName = '${{artifact.name}}'
-                      $ArtifactRootPath = '$(Pipeline.Workspace)/drop'
-                      $OutDir = '$(Pipeline.Workspace)/esrp-release'
+      - deployment: PublishPackage
+        displayName: "Publish to Crates.io"
+        condition: and(succeeded(), ne(variables['Skip.PublishPackage'], 'true'))
+        templateContext:
+          type: releaseJob  # Required, this indicates this deployment job is a release job
+          isProduction: true  # Required, must be 'true' or 'false'
+          inputs:  # All input build artifacts must be declared here
+          - input: pipelineArtifact  # Required, type of the input artifact
+            artifactName: ${{parameters.PipelineArtifactName}}  # Required, name of the pipeline artifact
+            targetPath: $(Pipeline.Workspace)/drop  # Optional, specifies where the artifact is downloaded to
+        environment: ${{parameters.Environment}}
+        # This timeout shouldn't be necessary once we're able to parallelize better. Right now,
+        # this is here to ensure larger areas (30+) libraries don't time out.
+        timeoutInMinutes: 120
+        dependsOn: TagRepository
+        pool:
+          name: azsdk-pool
+          image: ubuntu-24.04
+          os: linux
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - pwsh: |
+                    $ArtifactName = '${{artifact.name}}'
+                    $ArtifactRootPath = '$(Pipeline.Workspace)/drop'
+                    $OutDir = '$(Pipeline.Workspace)/esrp-release'
 
-                      Write-Host "Artifact name: $ArtifactName"
+                    Write-Host "Artifact name: $ArtifactName"
 
-                      $packageMetadataPath = "$ArtifactRootPath/PackageInfo/$ArtifactName.json"
-                      if (!(Test-Path $packageMetadataPath)) {
-                        Write-Error "Package metadata file not found: $packageMetadataPath"
-                        exit 1
-                      }
+                    $packageMetadataPath = "$ArtifactRootPath/PackageInfo/$ArtifactName.json"
+                    if (!(Test-Path $packageMetadataPath)) {
+                      Write-Error "Package metadata file not found: $packageMetadataPath"
+                      exit 1
+                    }
 
-                      $packageMetadata = Get-Content -Raw $packageMetadataPath | ConvertFrom-Json
-                      $packageVersion = $packageMetadata.version
-                      Write-Host "Package version: $packageVersion"
+                    $packageMetadata = Get-Content -Raw $packageMetadataPath | ConvertFrom-Json
+                    $packageVersion = $packageMetadata.version
+                    Write-Host "Package version: $packageVersion"
 
-                      $cratePath = "$ArtifactRootPath/$ArtifactName/$ArtifactName-$packageVersion.crate"
-                      Write-Host "##vso[task.setvariable variable=CratePath]$cratePath"
+                    $cratePath = "$ArtifactRootPath/$ArtifactName/$ArtifactName-$packageVersion.crate"
+                    Write-Host "##vso[task.setvariable variable=CratePath]$cratePath"
 
-                      New-Item -ItemType Directory -Path $OutDir -Force | Out-Null
-                      Copy-Item `
-                        -Path $cratePath`
-                        -Destination $OutDir
-                      Write-Host "Contents of $OutDir"
-                      Get-ChildItem -Path $OutDir | ForEach-Object { Write-Host $_.FullName }
-                    displayName: Copy crate for ESRP
+                    New-Item -ItemType Directory -Path $OutDir -Force | Out-Null
+                    Copy-Item `
+                      -Path $cratePath`
+                      -Destination $OutDir
+                    Write-Host "Contents of $OutDir"
+                    Get-ChildItem -Path $OutDir | ForEach-Object { Write-Host $_.FullName }
+                  displayName: Copy crate for ESRP
+                
+                - task: EsrpRelease@10
+                  displayName: 'ESRP Release'
+                  inputs:
+                    connectedservicename: 'Azure SDK PME Managed Identity'
+                    ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
+                    DomainTenantId: '975f013f-7f24-47e8-a7d3-abc4752bf346'
+                    Usemanagedidentity: true
+                    KeyVaultName: 'kv-azuresdk-codesign'
+                    SignCertName: 'azure-sdk-esrp-release-certificate'
+                    intent: 'packagedistribution'
+                    contenttype: 'Rust'
+                    contentsource: 'Folder'
+                    folderlocation: '$(Pipeline.Workspace)/esrp-release'
+                    waitforreleasecompletion: true
+                    owners: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
+                    approvers: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
+                    serviceendpointurl: 'https://api.esrp.microsoft.com/'
+                    mainpublisher: 'ESRPRELPACMANTEST'
 
-                  - pwsh: |
-                      $CratePath = '$(CratePath)'
-                      if (!(Test-Path $CratePath)) {
-                        Write-Error "Crate file not found: $CratePath"
-                        exit 1
-                      }
+      - job: UpdatePackageVersion
+        displayName: "API Review and Package Version Update"
+        condition: and(succeeded(), ne(variables['Skip.UpdatePackageVersion'], 'true'))
+        dependsOn: PublishPackage
+        steps:
+        - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
+          parameters:
+            paths:
+            - "/*"
 
-                      $evaluationDir = (Join-Path ([System.IO.Path]::GetTempPath()) ([System.IO.Path]::GetRandomFileName()))
+        - template: /eng/pipelines/templates/steps/use-rust.yml@self
+          parameters:
+            Toolchain: nightly
 
-                      New-Item -ItemType Directory -Path $evaluationDir -Force | Out-Null
-                      Invoke-Expression "tar --exclude `"Cargo.toml.orig`" -xzvf $CratePath -C $evaluationDir"
+        - download: current
+          displayName: Download ${{parameters.PipelineArtifactName}} artifact
+          artifact: ${{parameters.PipelineArtifactName}}
 
-                      if ($LASTEXITCODE) { 
-                        Write-Host "Failed to extract crate $CratePath"
-                        exit 1
-                      }
-
-                      Set-Location $evaluationDir
-                      Set-Location (Join-Path $evaluationDir $crateName)
-                      
-                      $command = @(
-                        "cargo publish", 
-                        "--locked",
-                        "--dry-run",
-                        "--package $packageName",
-                        "--allow-dirty"
-                      ) -join ' '
-                      Invoke-Expression $command
-
-                      if ($LASTEXITCODE) { 
-                        Write-Host "Crate $crateName is NOT publishable"
-                        exit 1
-                      } else { 
-                        Write-Host "Crate $crateName is publishable"
-                      }
-                    displayName: Verify crate is publishable
-
-                  - task: EsrpRelease@10
-                    displayName: 'ESRP Release'
-                    inputs:
-                      connectedservicename: 'Azure SDK PME Managed Identity'
-                      ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
-                      DomainTenantId: '975f013f-7f24-47e8-a7d3-abc4752bf346'
-                      Usemanagedidentity: true
-                      KeyVaultName: 'kv-azuresdk-codesign'
-                      SignCertName: 'azure-sdk-esrp-release-certificate'
-                      intent: 'packagedistribution'
-                      contenttype: 'Rust'
-                      contentsource: 'Folder'
-                      folderlocation: '$(Pipeline.Workspace)/esrp-release'
-                      waitforreleasecompletion: true
-                      owners: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
-                      approvers: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
-                      serviceendpointurl: 'https://api.esrp.microsoft.com/'
-                      mainpublisher: 'ESRPRELPACMANTEST'
-
-        - job: UpdatePackageVersion
-          displayName: "API Review and Package Version Update"
-          condition: and(succeeded(), ne(variables['Skip.UpdatePackageVersion'], 'true'))
-          dependsOn: PublishPackage
-          steps:
-          - template: /eng/common/pipelines/templates/steps/sparse-checkout.yml
-            parameters:
-              paths:
-              - "/*"
-
-          - template: /eng/pipelines/templates/steps/use-rust.yml@self
-            parameters:
-              Toolchain: nightly
-
-          - download: current
-            displayName: Download ${{parameters.PipelineArtifactName}} artifact
-            artifact: ${{parameters.PipelineArtifactName}}
-
+        - ${{each artifact in parameters.Artifacts }}:
           - template: /eng/common/pipelines/templates/steps/create-apireview.yml
             parameters:
               ArtifactPath: $(Pipeline.Workspace)/${{parameters.PipelineArtifactName}}
