--- a/eng/pipelines/templates/stages/archetype-rust-release.yml
+++ b/eng/pipelines/templates/stages/archetype-rust-release.yml
@@ -85,52 +85,54 @@ stages:
           runOnce:
             deploy:
               steps:
-                - pwsh: |
-                    $ArtifactName = '${{artifact.name}}'
-                    $ArtifactRootPath = '$(Pipeline.Workspace)/drop'
-                    $OutDir = '$(Pipeline.Workspace)/esrp-release'
+                - ${{ each artifact in parameters.Artifacts }}:
+                  - pwsh: |
+                      $ArtifactName = '${{artifact.name}}'
+                      $ArtifactRootPath = '$(Pipeline.Workspace)/drop'
+                      $OutDir = '$(Pipeline.Workspace)/esrp-release'
 
-                    Write-Host "Artifact name: $ArtifactName"
+                      Write-Host "Cleaning output directory: $OutDir"
+                      Remove-Item -Path $OutDir -Recurse -Force
+                      New-Item -ItemType Directory -Path $OutDir -Force | Out-Null
 
-                    $packageMetadataPath = "$ArtifactRootPath/PackageInfo/$ArtifactName.json"
-                    if (!(Test-Path $packageMetadataPath)) {
-                      Write-Error "Package metadata file not found: $packageMetadataPath"
-                      exit 1
-                    }
+                      Write-Host "Artifact name: $ArtifactName"
 
-                    $packageMetadata = Get-Content -Raw $packageMetadataPath | ConvertFrom-Json
-                    $packageVersion = $packageMetadata.version
-                    Write-Host "Package version: $packageVersion"
+                      $packageMetadataPath = "$ArtifactRootPath/PackageInfo/$ArtifactName.json"
+                      if (!(Test-Path $packageMetadataPath)) {
+                        Write-Error "Package metadata file not found: $packageMetadataPath"
+                        exit 1
+                      }
 
-                    $cratePath = "$ArtifactRootPath/$ArtifactName/$ArtifactName-$packageVersion.crate"
-                    Write-Host "##vso[task.setvariable variable=CratePath]$cratePath"
+                      $packageMetadata = Get-Content -Raw $packageMetadataPath | ConvertFrom-Json
+                      $packageVersion = $packageMetadata.version
+                      Write-Host "Package version: $packageVersion"
 
-                    New-Item -ItemType Directory -Path $OutDir -Force | Out-Null
-                    Copy-Item `
-                      -Path $cratePath`
-                      -Destination $OutDir
-                    Write-Host "Contents of $OutDir"
-                    Get-ChildItem -Path $OutDir | ForEach-Object { Write-Host $_.FullName }
-                  displayName: Copy crate for ESRP
-                
-                - task: EsrpRelease@10
-                  displayName: 'ESRP Release'
-                  inputs:
-                    connectedservicename: 'Azure SDK PME Managed Identity'
-                    ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
-                    DomainTenantId: '975f013f-7f24-47e8-a7d3-abc4752bf346'
-                    Usemanagedidentity: true
-                    KeyVaultName: 'kv-azuresdk-codesign'
-                    SignCertName: 'azure-sdk-esrp-release-certificate'
-                    intent: 'packagedistribution'
-                    contenttype: 'Rust'
-                    contentsource: 'Folder'
-                    folderlocation: '$(Pipeline.Workspace)/esrp-release'
-                    waitforreleasecompletion: true
-                    owners: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
-                    approvers: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
-                    serviceendpointurl: 'https://api.esrp.microsoft.com/'
-                    mainpublisher: 'ESRPRELPACMANTEST'
+                      $cratePath = "$ArtifactRootPath/$ArtifactName/$ArtifactName-$packageVersion.crate"
+                      Copy-Item `
+                        -Path $cratePath`
+                        -Destination $OutDir
+                      Write-Host "Contents of $OutDir"
+                      Get-ChildItem -Path $OutDir | ForEach-Object { Write-Host $_.FullName }
+                    displayName: Copy crate for ESRP
+                  
+                  - task: EsrpRelease@10
+                    displayName: 'ESRP Release'
+                    inputs:
+                      connectedservicename: 'Azure SDK PME Managed Identity'
+                      ClientId: '5f81938c-2544-4f1f-9251-dd9de5b8a81b'
+                      DomainTenantId: '975f013f-7f24-47e8-a7d3-abc4752bf346'
+                      Usemanagedidentity: true
+                      KeyVaultName: 'kv-azuresdk-codesign'
+                      SignCertName: 'azure-sdk-esrp-release-certificate'
+                      intent: 'packagedistribution'
+                      contenttype: 'Rust'
+                      contentsource: 'Folder'
+                      folderlocation: '$(Pipeline.Workspace)/esrp-release'
+                      waitforreleasecompletion: true
+                      owners: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
+                      approvers: ${{ coalesce(variables['Build.RequestedForEmail'], 'azuresdk@microsoft.com') }}
+                      serviceendpointurl: 'https://api.esrp.microsoft.com/'
+                      mainpublisher: 'ESRPRELPACMANTEST'
 
       - job: UpdatePackageVersion
         displayName: "API Review and Package Version Update"
